--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
     "@angular/cdk": "^9.2.0",
+    "@angular/cli": "^9.1.1",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.1",
@@ -23,15 +26,18 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "angularfire2": "^5.4.2",
+    "express": "^4.17.1",
     "firebase": "^7.13.2",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
     "@angular/language-service": "~9.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -48,5 +54,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "engines": {
+    "node": "v12.14.1",
+    "npm": "6.13.4"
   }
 }
