--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "typescript": "~3.7.5"
   },
   "engines": {
-    "node": "v12.14.1",
-    "npm": "6.13.4"
+    "node": "~12.14.1",
+    "npm": "~6.13.4"
   }
 }
