--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "talenar": {
+    "telenar": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -19,7 +19,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/talenar",
+            "outputPath": "dist/telenar",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "talenar:build"
+            "browserTarget": "telenar:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "talenar:build:production"
+              "browserTarget": "telenar:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "talenar:build"
+            "browserTarget": "telenar:build"
           }
         },
         "test": {
@@ -118,11 +118,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "talenar:serve"
+            "devServerTarget": "telenar:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "talenar:serve:production"
+              "devServerTarget": "telenar:serve:production"
             }
           }
         }
